[package]
name = "pinproxy"
version = "0.1.0"
edition = "2021"
authors = ["axomforge"]
description = "A lightweight HTTP proxy server based on Rust and Pingora"
license = "MIT"

[dependencies]
pingora = { version = "0.6.0", features = ["proxy"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
async-trait = "0.1"
http = "1"
